chore: k8s manifest config vol

--- a/deploy/kubernetes/hostPath/postee-pv.yaml
+++ b/deploy/kubernetes/hostPath/postee-pv.yaml
@@ -1,4 +1,5 @@
 #Create the volume for the Postee volumeClaimTemplates
+---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -12,4 +13,34 @@ spec:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   hostPath:
-    path: /tmp/postee/
+    path: /tmp/postee/db/
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: postee-config
+  labels:
+    app: postee-config
+spec:
+  capacity:
+    storage: 100Mi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: /tmp/postee/config/
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: postee-rego-templates
+  labels:
+    app: postee-rego-templates
+spec:
+  capacity:
+    storage: 100Mi
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: /tmp/postee/rego-templates/
