--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -1,5 +1,5 @@
 FROM alpine:3.13
-RUN apk update && apk add wget ca-certificates
+RUN apk --no-cache && apk add wget ca-certificates
 EXPOSE 8082
 EXPOSE 8445
 RUN mkdir /server
