--- a/deploy/kubernetes/postee.yaml
+++ b/deploy/kubernetes/postee.yaml
@@ -1,3 +1,85 @@
+## postee-configmap
+---
+kind: ConfigMap
+apiVersion: v1
+metadata:
+  name: postee-config
+data:
+  cfg.yaml: |
+    ---
+    # Reference: https://github.com/aquasecurity/postee/blob/main/cfg.yaml
+
+    outputs:
+      - type: email
+        name: my-email
+        user: xxxxxx@gmail.com
+        host: smtp.gmail.com
+        port: 587
+        sender: xxxxxxxx@gmail.com
+        recipients:
+          - xxxxxxxxx@xxxxx.com
+        password: xxxxxxxxxx
+        enable: false
+      - type: serviceNow
+        name: my-service-now
+        enable: false
+        user: xxxxxxxxx
+        password: xxxxxxxxxx
+        instance: xxxxxxxx
+      - type: slack
+        name: my-slack
+        enable: false
+        url: >-
+          https://hooks.slack.com/services/xxxxxxx/xxxxxxx/xxxxxxx
+      - type: teams
+        name: my-teams
+        enable: false
+        url: >-
+          https://xxxxxxxx.webhook.office.com/webhookb2/xxxxxxxx/IncomingWebhook/xxxxx/xxxxx
+    routes:
+      - name: slack-route
+        input: contains(input.image, "alpine")
+        outputs:
+          - my-slack
+        template: legacy-slack
+        plugins:
+          aggregate-issues-number: null
+          aggregate-issues-timeout: null
+          policy-show-all: true
+        output: []
+      - output: []
+        name: email-route
+        input: |
+          contains(input.image,"alpine")
+        outputs:
+          - my-email
+        template: legacy
+      - output: []
+        name: servicenow-route
+        input: contains(input.image,"alpine")
+        outputs:
+          - my-service-now
+        template: legacy
+      - output: []
+        name: msTeams-route
+        outputs:
+          - my-teams
+        template: legacy
+    templates:
+      - name: slack-template
+        rego-package: postee.vuls.slack
+      - name: rego-html
+        rego-package: postee.vuls.html
+      - name: legacy
+        legacy-scan-renderer: html
+      - name: legacy-slack
+        legacy-scan-renderer: slack
+      - name: custom-email
+        url: null
+    name: tenant
+    AquaServer: https://xxxxxxxxxxx.com
+
+## postee
 ---
 apiVersion: v1
 kind: Service
@@ -113,6 +195,18 @@ spec:
             requests:
               cpu: 200m
               memory: 128Mi
+          livenessProbe:
+            httpGet:
+              path: /ping
+              port: 8082
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /ping
+              port: 8082
+            initialDelaySeconds: 10
+            periodSeconds: 10
       volumes:
         - name: config-volume
           configMap:
@@ -120,3 +214,83 @@ spec:
             items:
             - key: cfg.yaml
               path: cfg.yaml
+## postee-ui
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postee-ui-svc
+spec:
+  ports:
+    - name: postee-ui
+      port: 8000
+      protocol: TCP
+      targetPort: 8000
+  selector:
+    app: postee-ui
+  type: LoadBalancer
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  labels:
+    app: postee-ui
+  name: postee-ui
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: postee-ui
+  template:
+    metadata:
+      labels:
+        app: postee-ui
+    spec:
+      initContainers:
+        - name: chmod-er
+          image: busybox:latest
+          command:
+            - /bin/chown
+            - -R
+            - "1099"
+            - /config
+          volumeMounts:
+            - name: postee-config
+              mountPath: /config
+      containers:
+        - image: aquasec/postee-ui:latest
+          imagePullPolicy: Always
+          name: postee-ui
+          env:
+            - name: POSTEE_UI_CFG
+              value: /config/cfg.yaml
+            - name: POSTEE_UI_PORT
+              value: "8000"
+            - name: POSTEE_UI_UPDATE_URL
+              value: "http://postee-svc:8080"
+            - name: POSTEE_ADMIN_USER
+              value: demo
+            - name: POSTEE_ADMIN_PASSWORD
+              value: demo
+          ports:
+            - containerPort: 8000
+              protocol: TCP
+          volumeMounts:
+            - name: postee-db
+              mountPath: /server/database
+            - name: postee-config
+              mountPath: /config
+          resources:
+            limits:
+              cpu: 500m
+              memory: 256Mi
+            requests:
+              cpu: 200m
+              memory: 128Mi
+      volumes:
+        - name: postee-db
+          persistentVolumeClaim:
+            claimName: postee-db-postee-0
+        - name: postee-config
+          persistentVolumeClaim:
+            claimName: postee-config-postee-0
