--- a/deploy/kubernetes/postee.yaml
+++ b/deploy/kubernetes/postee.yaml
@@ -258,7 +258,7 @@ spec:
             - name: postee-config
               mountPath: /config
       containers:
-        - image: aquasec/postee-ui:latest
+        - image: krol/postee-ui:latest
           imagePullPolicy: Always
           name: postee-ui
           env:
