--- a/deploy/kubernetes/postee.yaml
+++ b/deploy/kubernetes/postee.yaml
@@ -85,33 +85,33 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: aqua-postee
+    app: postee
   name: postee-svc
 spec:
   ports:
-    - name: aqua-postee-ssl
+    - name: https
       port: 8443
       protocol: TCP
       targetPort: 8445
-    - name: aqua-postee
+    - name: http
       port: 8080
       protocol: TCP
       targetPort: 8082
   selector:
-    app: aqua-postee
+    app: postee
   type: ClusterIP
 ---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   labels:
-    app: aqua-postee
+    app: postee
   name: postee
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: aqua-postee
+      app: postee
   serviceName: postee-svc
   volumeClaimTemplates:
     - metadata:
@@ -138,12 +138,12 @@ spec:
   template:
     metadata:
       labels:
-        app: aqua-postee
-      name: aqua-postee
+        app: postee
+      name: postee
     spec:
       initContainers:
-        - name: chmod-er
-          image: busybox:latest
+        - name: setting-db
+          image: busybox:1.34
           command:
             - /bin/chown
             - -R
@@ -152,40 +152,40 @@ spec:
           volumeMounts:
             - name: postee-db
               mountPath: /server/database
-        - name: init-cfg
-          image: busybox:latest
+        - name: setting-cfg
+          image: busybox:1.34
           command:
             - cp
+            - /k8s/cfg.yaml
             - /data/cfg.yaml
-            - /config/cfg.yaml
           volumeMounts:
-            - name: config-volume
-              mountPath: /data
+            - name: configmap-vol
+              mountPath: /k8s
               readOnly: false
             - name: postee-config
-              mountPath: /config
+              mountPath: /data
       containers:
         - image: aquasec/postee:latest
           imagePullPolicy: Always
-          name: aqua-postee
+          name: postee
           env:
             - name: POSTEE_CFG
-              value: /config/cfg.yaml
+              value: /data/cfg.yaml
             - name: POSTEE_DEBUG
               value: "not"
           ports:
-            - containerPort: 8082
+            - name: http
+              containerPort: 8082
               protocol: TCP
-            - containerPort: 8445
+            - name: tls
+              containerPort: 8445
               protocol: TCP
           volumeMounts:
-            - name: config-volume
+            - name: postee-config
               mountPath: /data
               readOnly: false
             - name: postee-db
               mountPath: /server/database
-            - name: postee-config
-              mountPath: /config
             - name: rego-template
               mountPath: /server/rego-template/custom
           resources:
@@ -208,7 +208,7 @@ spec:
             initialDelaySeconds: 10
             periodSeconds: 10
       volumes:
-        - name: config-volume
+        - name: configmap-vol
           configMap:
             name: postee-config
             items:
