--- a/cfg.yaml
+++ b/cfg.yaml
@@ -15,6 +15,7 @@ routes:
 
 #- name: route1                                 #  Route name. Must be unique
 #  input: contains(input.image, "alpine")       #  REGO rule to match input message against route
+#  input-files:                                 #  Array filePaths to files with REGO rules
 #  outputs: [my-slack]                          #  Output name (needs to be defined under "outputs") which will receive the message
 #  template: slack-template                     #  Template name (needs to be defined under "templates") which will be used to process the message output format
 #  plugins:                                     #  Optional plugins
