Feat: added examples rego rules and env to files dir added examples rego files policy related features and REGO_FILTERS_PATH - path to dir with rego files

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -15,7 +15,14 @@ routes:
 
 #- name: route1                                 #  Route name. Must be unique
 #  input: contains(input.image, "alpine")       #  REGO rule to match input message against route
-#  input-files:                                 #  Array filePaths to files with REGO rules
+#  input-files:                                  #  Array filePaths to files with REGO rules
+#   - Policy-Image-Name.rego
+#   - Igrore-Image-Name.rego
+#   - Policy-Registry.rego
+#   - Ignore-Registry.rego
+#   - Policy-Only-Fix-Available.rego
+#   - Policy-Min-Vulnerability.rego
+#   - Policy-Related-Features.rego
 #  outputs: [my-slack]                          #  Output name (needs to be defined under "outputs") which will receive the message
 #  template: slack-template                     #  Template name (needs to be defined under "templates") which will be used to process the message output format
 #  plugins:                                     #  Optional plugins
