--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -7,6 +7,7 @@ RUN mkdir /server/database
 RUN mkdir /config
 COPY postee /server/
 COPY rego-templates /server/rego-templates
+COPY rego-filters /server/rego-filters
 COPY cfg.yaml /config/
 WORKDIR /server
 RUN chmod +x postee
