--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "serve": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service serve",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service build",
+    "lint": "export NODE_OPTIONS=--openssl-legacy-provider; vue-cli-service lint"
   },
   "dependencies": {
     "core-js": "^3.18.1",
