feat: helm chart with postee v2

--- a/deploy/helm/postee/templates/tests/test-connection.yaml
+++ b/deploy/helm/postee/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "postee.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "postee.fullname" . }}:{{ .Values.service.Port }}']
   restartPolicy: Never
