--- a/deploy/kubernetes/postee.yaml
+++ b/deploy/kubernetes/postee.yaml
@@ -248,7 +248,7 @@ spec:
     spec:
       initContainers:
         - name: chmod-er
-          image: busybox:latest
+          image: busybox:1.34
           command:
             - /bin/chown
             - -R
