chore: adding readiness in k8s postee-ui

--- a/deploy/kubernetes/postee.yaml
+++ b/deploy/kubernetes/postee.yaml
@@ -287,6 +287,18 @@ spec:
             requests:
               cpu: 200m
               memory: 128Mi
+          livenessProbe:
+            httpGet:
+              path: /ping
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /ping
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 10
       volumes:
         - name: postee-db
           persistentVolumeClaim:
