chore: adding secure context

--- a/deploy/helm/postee/values.yaml
+++ b/deploy/helm/postee/values.yaml
@@ -7,8 +7,8 @@ posteeConfigPath: "cfg-files/*"
 
 posteUi:
   port: 8000
-  user: admin
-  pass: admin
+  user: ""
+  pass: ""
   image: aquasec/postee-ui
   tag: "latest"
 
