--- a/ui/frontend/package.json
+++ b/ui/frontend/package.json
@@ -21,17 +21,17 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-service": "~4.5.13",
+    "@vue/cli-service": "~4.5.15",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^7.18.0",
     "vue-template-compiler": "^2.6.11"
   },
   "resolutions": {
-    "set-value": "4.0.1",
     "ansi-regex": "5.0.1",
     "glob-parent": "5.1.2",
-    "nth-check": "2.0.1"
+    "nth-check": "2.0.1",
+    "node-forge": "1.0.0"
   },
   "eslintConfig": {
     "root": true,
