chore: text and volume paths in Postee helm chart

--- a/deploy/helm/postee/values.yaml
+++ b/deploy/helm/postee/values.yaml
@@ -100,8 +100,8 @@ persistentVolume:
   enabled: false
   mountPathDb: /server/database
   mountPathConfig: /data
-  mountPathRego: /server/rego-template
-  mountPathFilters: /server/rego-filters
+  mountPathRego: /server/rego-templates/custom
+  mountPathFilters: /server/rego-filters/custom
   accessModes:
     - ReadWriteOnce
   size: 1Gi
