--- a/cfg.yaml
+++ b/cfg.yaml
@@ -102,6 +102,7 @@ outputs:
   type: webhook
   enable: false
   url: https://..../webhook/   #  Webhook's url
+  timeout:                     #  Webhook's timeout in seconds
 
 - name: splunk
   type: splunk
