--- a/cfg.yaml
+++ b/cfg.yaml
@@ -102,7 +102,7 @@ outputs:
   type: webhook
   enable: false
   url: https://..../webhook/   #  Webhook's url
-  timeout:                     #  Webhook's timeout in seconds
+  timeout:                     #  Webhook's timeout in seconds. Default: 120
 
 - name: splunk
   type: splunk
