--- a/.github/workflows/enterprise.yml
+++ b/.github/workflows/enterprise.yml
@@ -1,5 +1,5 @@
 ---
-name: Go
+name: EnterpriseBuild
 
 on:
   push:
@@ -8,8 +8,7 @@ on:
     branches: [postee-for-enterprise]
 
 jobs:
-
-  buildEnterprise:
+  build:
     name: Build
     runs-on: ubuntu-20.04
     steps:
@@ -29,9 +28,18 @@ jobs:
         uses: codespell-project/actions-codespell@master
         with:
           skip: src,rego-templates,ui,go.mod,go.sum
-
       - name: Build
         run: make all
-
+  test:
+    name: Test
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@424fc82d43fa5a37540bae62709ddcc23d9520d4 # v2.1.5
+        with:
+          go-version: ^1.17
+        id: go
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579 # v2.4.0
       - name: Test
         run: make test
