--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,7 +29,7 @@ jobs:
       - name: check spell
         uses: codespell-project/actions-codespell@master
         with:
-          skip: src,rego_templates,ui
+          skip: src,rego-templates,ui
 
       - name: Build
         run: make all
