--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -6,7 +6,7 @@ RUN mkdir /server
 RUN mkdir /server/database
 RUN mkdir /config
 COPY postee /server/
-COPY rego_templates /server/rego_templates
+COPY rego-templates /server/rego-templates
 COPY rego-filters /server/rego-filters
 COPY cfg.yaml /config/
 WORKDIR /server
