--- a/cfg-actions.yaml
+++ b/cfg-actions.yaml
@@ -33,7 +33,7 @@ outputs:
   type: exec
   enable: true
   env: ["MY_ENV_VAR=foo_bar_baz", "MY_KEY=secret"]     # Optional. Any environment variables to pass in
-  input-file: exec-test.sh                             # Required. Specify the path to the script to run
+  input-file: /tmp/exec-test.sh                        # Required. Specify the path to the script to run
 
 - name: my-http-get
   type: http
@@ -52,4 +52,4 @@ outputs:
   headers:                            # Optional. Headers to pass in for the request.
     "Foo": ["bar", "baz"]
   timeout: 10s                        # Optional. Timeout value in XX(s,m,h)
-  bodyFile: tracee.event.logs         # Optional. Body of the HTTP request
+  bodyFile: /tmp/tracee.event.logs    # Optional. Body of the HTTP request
