--- a/cfg-docker-actions.yaml
+++ b/cfg-docker-actions.yaml
@@ -32,7 +32,7 @@ outputs:
 - name: my-docker
   type: docker
   enable: true
-  docker-image-name: "docker.io/library/alpine"
-  docker-cmd: ["echo", "hello world"]
-#  docker-volume-mounts:      # TODO: Support volume mounts
-#    "~/":"/tmp"
+  docker-image-name: "docker.io/library/alpine"   # Required. Image name of container to run.
+  docker-cmd: ["echo", "hello world"]             # Required. Command to run when starting container.
+  docker-volume-mounts:                           # Optional. Volume mounts present inside the container
+    "/path/to/dir": "/path/to/destination"
